--- a/Flashcard/de.lproj/Main.strings
+++ b/Flashcard/de.lproj/Main.strings
@@ -1,4 +1,3 @@
-
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "1Kc-b9-pPG"; */
 "1Kc-b9-pPG.normalTitle" = "Button";
 
@@ -6,22 +5,23 @@
 "AZt-kk-Obh.text" = "Download";
 
 /* Class = "UINavigationItem"; title = "New"; ObjectID = "Hwi-ts-nsl"; */
-"Hwi-ts-nsl.title" = "New";
+"Hwi-ts-nsl.title" = "Neu";
 
 /* Class = "UINavigationItem"; title = "Download"; ObjectID = "Yoo-UB-C8a"; */
 "Yoo-UB-C8a.title" = "Download";
 
 /* Class = "UILabel"; text = "English <-> German"; ObjectID = "Yxq-qX-uru"; */
-"Yxq-qX-uru.text" = "English <-> German";
+"Yxq-qX-uru.text" = "Englisch <-> Deutsch";
 
 /* Class = "UITableViewSection"; headerTitle = "NEW DECK"; ObjectID = "dX9-ac-F0i"; */
-"dX9-ac-F0i.headerTitle" = "NEW DECK";
+"dX9-ac-F0i.headerTitle" = "Neuer Stabel";
 
 /* Class = "UILabel"; text = "Russian <-> German"; ObjectID = "nEM-Ca-jgs"; */
-"nEM-Ca-jgs.text" = "Russian <-> German";
+"nEM-Ca-jgs.text" = "Russisch <-> Deutsch";
 
 /* Class = "UIButton"; normalTitle = "Button"; ObjectID = "wkd-M9-AWB"; */
 "wkd-M9-AWB.normalTitle" = "Button";
 
 /* Class = "UINavigationItem"; title = "Flashcards"; ObjectID = "yxT-Ze-qZi"; */
 "yxT-Ze-qZi.title" = "Flashcards";
+
